# Logion

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .prettierignore  LOGION_AI_DEVELOPMENT_CONSTRAINTS.md  LOGION_EXECUTION_PLAN.md  README.md  compose.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_phase0_baseline.py  0002_identity_sessions.py  0003_passkey_credentials.py  0004_totp_recovery.py  0005_workspace_space.py  0006_workspace_invitation.py  0007_audit_query.py  0008_email_verification.py  0009_sync_ledger.py  0010_planning_core.py  0011_task_sessions.py  0012_session_sync_fields.py  0013_content_core.py  0014_evidence_verification.py  0015_learning_science_foundation.py  0016_assessment_review_foundation.py  0017_exam.py  0018_subject_syllabus.py  0019_mock_score.py  0020_self_study.py  0021_research.py  0022_collaboration.py  0023_ai_provider.py  0024_ai_models_health.py  0025_ai_routing_budget.py  0026_ai_runs_drafts.py  0027_templates_shares.py  0028_engagement.py  0029_data_exports.py  0030_data_imports.py  0031_account_deletion.py  0032_attachments.py  0033_note_yjs_state.py  0034_sync_conflicts.py
apps/api/src/logion_api/: __init__.py  config.py  db.py  errors.py  health.py  main.py  middleware.py  openapi_export.py
apps/api/src/logion_api/ai_gateway/: __init__.py  adapter.py  crypto.py  dependencies.py  execution_service.py  generation_adapter.py  models.py  network.py  routes.py  routing_routes.py  routing_schemas.py  routing_service.py  run_crypto.py  run_routes.py  run_schemas.py  run_service.py  schemas.py  service.py
apps/api/src/logion_api/audit/: __init__.py  dependencies.py  routes.py  schemas.py  service.py
apps/api/src/logion_api/collaboration/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  service.py
apps/api/src/logion_api/content/: __init__.py  attachment_dependencies.py  attachment_routes.py  attachment_schemas.py  attachment_service.py  attachment_storage.py  dependencies.py  models.py  routes.py  schemas.py  service.py  yjs_documents.py
apps/api/src/logion_api/engagement/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  service.py
apps/api/src/logion_api/exam/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  service.py
apps/api/tests/: test_account_deletion_integration.py  test_ai_generation.py  test_ai_provider.py  test_ai_provider_integration.py  test_ai_routing_integration.py  test_api_health.py  test_assessment_review_integration.py  test_assessment_sync_integration.py  test_attachment_integration.py  test_attachments.py  test_audit_integration.py  test_audit_security.py  test_collaboration.py  test_collaboration_integration.py  test_content.py  test_content_integration.py  test_content_sync_integration.py  test_data_import_integration.py  test_data_import_unit.py  test_email_verification_integration.py  test_email_verification_security.py  test_engagement_integration.py  test_evidence.py  test_evidence_integration.py  test_evidence_sync_integration.py  test_exam.py  test_exam_integration.py  test_execution.py  test_execution_integration.py  test_execution_sync_integration.py  test_growth_integration.py  test_growth_template.py  test_identity_integration.py  test_identity_security.py  test_memory.py  test_memory_integration.py  test_memory_sync_integration.py  test_note_yjs_sync_integration.py  test_passkey_integration.py  test_password_recovery_integration.py  (+24 more)
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/logion_worker/: __init__.py  health.py  main.py
apps/worker/tests/: test_worker_health.py
(+297 files in other folders)
