[project]
name = "logion-workspace"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1",
  "mypy>=1.15,<2",
  "pip-audit>=2.9,<3",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/api", "apps/worker"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers -m 'not integration'"
testpaths = ["apps/api/tests", "apps/worker/tests", "tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
markers = ["integration: requires PostgreSQL and Redis services"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["archive", "prototype"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
exclude = "archive|prototype"
