[project]
name = "logion-api"
version = "0.1.0"
description = "Logion FastAPI service"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.135,<1",
  "pydantic-settings>=2.13,<3",
  "redis>=6.4,<8",
  "sqlalchemy[asyncio]>=2.0.48,<3",
  "uvicorn[standard]>=0.41,<1",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logion_api"]
