[project]
name = "logion-api"
version = "0.1.0"
description = "Logion FastAPI service"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.14,<2",
  "argon2-cffi>=25.1,<26",
  "asyncpg>=0.30,<1",
  "cryptography>=49,<50",
  "email-validator>=2.3,<3",
  "fastapi>=0.135,<1",
  "httpx>=0.28,<1",
  "pycrdt>=0.12,<0.13",
  "pydantic-settings>=2.13,<3",
  "pyotp>=2.9,<3",
  "redis>=6.4,<8",
  "rfc8785>=0.1.4,<0.2",
  "sqlalchemy[asyncio]>=2.0.48,<3",
  "tzdata>=2025.3,<2027",
  "uuid6>=2025.0.1,<2026",
  "uvicorn[standard]>=0.41,<1",
  "webauthn>=3,<4",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logion_api"]
